--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -27,7 +30,10 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem
+    --radius: 0.5rem;
+    --font-primary: 'Montserrat', sans-serif;
+    --font-secondary: 'Montserrat', sans-serif;
+    --font-tertiary: 'Montserrat', sans-serif;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -59,6 +65,7 @@
 @layer base {
   * {
     @apply border-border;
+    @apply font-primary
   }
   body {
     @apply bg-background text-foreground;
@@ -72,4 +79,7 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+@theme{
+  --font-display : 'Montserrat', sans-serif;
 }
